--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Edit your site info here -->
-  <title>📖CMD📖Learning📖</title>
+  <title>digitalCV</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="canonical" href="https://zerodevx.github.io/zero-md/">
 
@@ -51,11 +51,11 @@
         <a href="#blogarticle">Blog & Article</a>
       </li>
     </ul>
-    <header class="page-header">
+    <!-- <header class="page-header">
       <h1><u>
           <div class="msg">Windows Popular Command</div>
         </u></h1>
-    </header>
+    </header> -->
     <!-- Your fixed div content goes here -->
   </div>
 
@@ -129,7 +129,7 @@
 
     function showHeaderMessage(msg) {
       msg = msg ? msg : 'about';
-      document.getElementsByClassName("msg")[0].innerHTML = msgData[msg];
+      // document.getElementsByClassName("msg")[0].innerHTML = msgData[msg];
     }
   </script>
 </body>
